Fix text overlapping the nav bar section - added padding-top to page title CV BUILDER to give it space from navbar

--- a/apps/redi-talent-pool/src/pages/app/cv-builder/cv-list/CvListPage.scss
+++ b/apps/redi-talent-pool/src/pages/app/cv-builder/cv-list/CvListPage.scss
@@ -1,3 +1,4 @@
 .heading {
   font-family: Avenir LT Std;
+  padding-top: 2rem;
 }
